Update index.html - add arrow

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="education">
-                <h2>Education</h2>
+                <h2>➥ Education</h2>
 
                 <h4>Technologist in Systems Analysis and Development</h4>
                 <h5>Universidade Federal do Paraná - UFPR</h5>
@@ -52,7 +52,7 @@
                 <h6>06/16 - 06/18 - Guaratinguetá/SP</h6>
             </div>
             <div class="work">
-                <h2>Work Experience</h2>
+                <h2>➥ Work Experience</h2>
 
                 <h4>Air Traffic Controller</h4>
                 <h5>Brasilian Air Force</h5>
@@ -60,7 +60,7 @@
 
             </div>
             <div class="skills">
-                <h2>Skills</h2>
+                <h2>➥ Skills</h2>
 
                 <p>HTML 5</p>
                 <P>CSS 3</P>
@@ -70,7 +70,7 @@
 
             </div>
             <div class="certificates">
-                <h2>Certificates</h2>
+                <h2>➥ Certificates</h2>
 
                 <h4>Java Programming and Software Engineering Fundamental</h4>
                 <h5>Programming Foundations with HTML, CSS and JavaScript - 01/22</h5>
