--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <main>
             <div class="principal">
-                <h2 class="titulo-principal">Eduardo Félix Neto</h2>
+                <h2 class="titulo-principal">➥ Eduardo Félix Neto</h2>
 
                 <h3>Software Developer</h3>
 
