Add changes on <a> carcará

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="carcara.png" alt="Logo Carcará" class="carcara"></h1>
+                <h1><a href="https://eduardofelixneto.github.io/resume-eduardo-felix/"><img src="carcara.png" alt="Logo Carcará" class="carcara"></a></h1>
                 
                 <nav>
                     <ul>
-                        <li><a href="https://www.ufpr.br/portalufpr">eduardofelix@ufpr.br 📧</a></li>
-                        <li><a href="https://wa.me/5541999584405">+55 41 99958-4405 📱</a></li>
-                        <li><a href="https://goo.gl/maps/RMvNr7eMiVRUNi1q8">Curitiba/PR📍</a></li>
+                        <li><a href="https://www.ufpr.br/portalufpr" target="_blank">eduardofelix@ufpr.br 📧</a></li>
+                        <li><a href="https://wa.me/5541999584405" target="_blank">+55 41 99958-4405 📱</a></li>
+                        <li><a href="https://goo.gl/maps/RMvNr7eMiVRUNi1q8" target="_blank>Curitiba/PR📍</a></li>
                     </ul>
                 </nav>
             </div>
