--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a href="https://www.ufpr.br/portalufpr" target="_blank">eduardofelix@ufpr.br 📧</a></li>
                         <li><a href="https://wa.me/5541999584405" target="_blank">+55 41 99958-4405 📱</a></li>
-                        <li><a href="https://goo.gl/maps/RMvNr7eMiVRUNi1q8" target="_blank">Curitiba/PR📍</a></li>
+                        <li><a href="#" target="_blank">Curitiba/PR📍</a></li>
                     </ul>
                 </nav>
             </div>
